rust-web-server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rust-web-server
  labels:
    name: rust-web-server
